# Satty

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  Makefile.toml  PKGBUILD  README.md  build.rs  config.toml  flake.nix  icons.toml  release.nu  satty.desktop
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: lint.yml  release.yml
cli/: Cargo.toml
cli/src/: command_line.rs  lib.rs
src/: command_line.rs  configuration.rs  main.rs  math.rs  notification.rs  renderer.rs  sketch_board.rs  style.rs
src/femtovg_area/: imp.rs  mod.rs
src/icons/: mod.rs
src/ime/: mod.rs  pango_adapter.rs  preedit.rs
src/tools/: arrow.rs  blur.rs  brush.rs  crop.rs  ellipse.rs  highlight.rs  line.rs  marker.rs  mod.rs  pointer.rs  rectangle.rs  text.rs  zoom.rs
src/ui/: mod.rs  toast.rs  toolbars.rs
