[package]
name = "satty"
version = "0.20.0"
edition = "2021"
authors = ["Matthias Gabriel <gabm+aur@mailbox.org>"]
description = "Modern Screenshot Annotation."
homepage = "https://github.com/gabm/satty"
repository = "https://github.com/gabm/satty"
license = "MPL-2.0"
include = [
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "assets/",
]


[dependencies]
relm4 = { version = "0.10.0", features = ["macros", "libadwaita", "gnome_42"] }
tokio = { version = "1.48.0", features = ["time"] }
gdk-pixbuf = "0.21.2"

# error handling
anyhow = "1.0"
thiserror = "2.0"

# command line
clap = { version = "4.5.51", features = ["derive"] }

# configuration file
xdg = "^3.0"
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
hex_color = {version = "3", features = ["serde"]}
chrono = "0.4.42"

# opengl rendering backend
femtovg = "0.19"
libloading = "0.8"
epoxy = "0.1.0"
glow = "0.16.0"
glib-macros = "0.21.4"
glib = "0.21.4"
resource = "0.6.1"  # font emedding
fontconfig = "0.10.0"  # font loading
keycode = "1.0.0"
pango = "0.21.3"

[dependencies.relm4-icons]
version = "0.10.0"


[build-dependencies]
clap = { version = "4.5.51", features = ["derive"] }
clap_complete = "4.5.60"
clap_complete_nushell = "4.5.9"
clap_complete_fig = "4.5.2"
relm4-icons-build = "0.10"
# temporary fix, command_line is part of the "build" crate
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
